--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@ Source code is available here: https://github.com/patorjk/JavaScript-Snake
     <meta charset="utf-8">
     <title>JavaScript Snake</title>
     <link rel=stylesheet id=style type=text/css href=./css/main-snake.css />
-    <button onclick=getTheme()>Click to use this theme.</button>
+<!--     <button onclick=getTheme()>Click to use this theme.</button>
     <select id="select">
         <option>Dark Theme</option>
         <option>Revert To Original</option>
-    </select>
+    </select> -->
     <div id="mode-wrapper">Select which mode you would like to play in.<br /><button id="Easy">Easy</button><br /><button id="Medium">Medium</button><br /><button id="Difficult">Difficult</button></div>
 <button id="high-score">Get your current high score for this game.</button>
 <script>
